--- a/Main/Web.config
+++ b/Main/Web.config
@@ -32,7 +32,7 @@
     <roleManager enabled="true" defaultProvider="CustomRolesProvider" cacheRolesInCookie="false">
       <providers>
         <clear/>
-        <add name="CustomRolesProvider" type=" HJ_Template_MVC.Security.CustomRolesProvider"/>
+        <add name="CustomRolesProvider" type=" Main.Security.CustomRolesProvider"/>
       </providers>
     </roleManager>
     <authentication mode="Forms">
