--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -145,6 +145,8 @@
     <Content Include="fonts\Yekan.ttf" />
     <Content Include="fonts\YekanWeb-Regular.woff" />
     <Content Include="packages.config" />
+    <Content Include="scripts\axios.js" />
+    <Content Include="scripts\axios.min.js" />
     <Content Include="scripts\bootstrap-rtl.js" />
     <Content Include="scripts\bootstrap-rtl.min.js" />
     <Content Include="scripts\bootstrap.bundle.js" />
@@ -162,6 +164,8 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="scripts\axios.min.map" />
+    <Content Include="scripts\axios.map" />
     <None Include="scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="scripts\jquery-3.4.1.js" />
     <Content Include="scripts\jquery-3.4.1.min.js" />
@@ -174,7 +178,10 @@
       <LastGenOutput>T4MVC.cs</LastGenOutput>
     </None>
     <None Include="T4MVC.tt.hooks.t4" />
+    <Content Include="scripts\vue.js" />
+    <Content Include="scripts\vue.min.js" />
     <Content Include="Views\Users\Create.cshtml" />
+    <Content Include="Views\Order\Create.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -224,6 +231,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
