--- a/Main/Views/web.config
+++ b/Main/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="HJ_Template_MVC" />
+        <add namespace="Main" />
         <add namespace="Infrastructure"/>
       </namespaces>
     </pages>
