--- a/Main/packages.config
+++ b/Main/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="axios.js" version="0.18.0" targetFramework="net452" />
   <package id="bootstrap" version="4.4.1" targetFramework="net452" />
   <package id="bootstrap-rtl" version="3.3.6" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
@@ -19,4 +20,5 @@
   <package id="popper.js" version="1.16.0" targetFramework="net452" />
   <package id="T4MVC" version="4.0.0" targetFramework="net452" />
   <package id="T4MVCExtensions" version="4.0.0" targetFramework="net452" />
+  <package id="vue" version="2.6.11" targetFramework="net452" />
 </packages>
