--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -246,6 +246,9 @@
     <Compile Include="Infrastructure\LogAttribute.cs" />
     <Compile Include="Infrastructure\Messages.cs" />
     <Compile Include="Infrastructure\MyHtmlHelper.cs" />
+    <Compile Include="OrderController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CustomRolesProvider.cs" />
     <Compile Include="SharedController.generated.cs">
