--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Class1.cs" />
     <Compile Include="DataBaseContext.cs" />
     <Compile Include="DatabaseContextInitializer.cs" />
+    <Compile Include="Factor.cs" />
+    <Compile Include="FactorDetail.cs" />
     <Compile Include="GroupProduct.cs" />
     <Compile Include="Infrastructure\MaxWordsAttribute.cs" />
     <Compile Include="Product.cs" />
