--- a/Main/Web.config
+++ b/Main/Web.config
@@ -36,7 +36,7 @@
       </providers>
     </roleManager>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" defaultUrl="~/Users/Create" timeout="30" cookieless="AutoDetect" name="9379a105422347899d593577608a0db4"
+      <forms loginUrl="~/Account/Login" defaultUrl="~/Order/OrederCustomer" timeout="120" cookieless="AutoDetect" name="9379a105422347899d593577608a0db4"
         protection="All" requireSSL="false" slidingExpiration="true"/>
     </authentication>
     <!--<authorization>
@@ -91,4 +91,7 @@
         type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </DbProviderFactories>
   </system.data>
+
+
+
 </configuration>
