--- a/Main/Web.config
+++ b/Main/Web.config
@@ -36,8 +36,8 @@
       </providers>
     </roleManager>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" defaultUrl="~/Order/OrederCustomer" cookieless="AutoDetect" name="9379a105422347899d593577608a0db4"
-        protection="All" requireSSL="false" />
+      <forms loginUrl="~/Account/Login" defaultUrl="~/Order/OrederCustomer"  cookieless="AutoDetect" name="9379a105422347899d593577608a0db4"
+        protection="All" requireSSL="false" timeout="360" />
     </authentication>
     <!--<authorization>
       -->
