--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -209,6 +209,11 @@
     <Content Include="Views\RegisterOrder\RegisterFactor.cshtml" />
     <Content Include="Views\Watch\Index.cshtml" />
     <Content Include="Views\Report\Index.cshtml" />
+    <Content Include="Views\Configs\Create.cshtml" />
+    <Content Include="Views\Configs\Delete.cshtml" />
+    <Content Include="Views\Configs\Details.cshtml" />
+    <Content Include="Views\Configs\Edit.cshtml" />
+    <Content Include="Views\Configs\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -257,6 +262,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ConfigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\RegisterOrderController.cs" />
