--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="DataBaseContext.cs" />
     <Compile Include="DatabaseContextInitializer.cs" />
     <Compile Include="Factor.cs" />
