--- a/Main/Web.config
+++ b/Main/Web.config
@@ -5,12 +5,13 @@
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      requirePermission="false"/>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+    
+    
+  
+  <section name="entityFramework"
+    type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+    requirePermission="false"/>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DatabaseContext" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TestBekhard;Data Source=."
       providerName="System.Data.SqlClient"/>
@@ -36,8 +37,8 @@
       </providers>
     </roleManager>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" defaultUrl="~/Order/OrederCustomer"  cookieless="AutoDetect" name="9379a105422347899d593577608a0db4"
-        protection="All" requireSSL="false" timeout="360" />
+      <forms loginUrl="~/Account/Login" defaultUrl="~/Order/OrederCustomer" cookieless="AutoDetect" name="9379a105422347899d593577608a0db4" protection="All"
+        requireSSL="false" timeout="360"/>
     </authentication>
     <!--<authorization>
       -->
@@ -63,15 +64,15 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact"/>
+    </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="System.Data.SqlServerCe.4.0"/>
       </parameters>
     </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact"/>
-    </providers>
   </entityFramework>
   <system.codedom>
     <compilers>
