--- a/Main/Web.config
+++ b/Main/Web.config
@@ -12,12 +12,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TestBekhard;Data Source=." providerName="System.Data.SqlClient" />
-    <!--<add
+    <!--<add name="DatabaseContext" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TestBekhard;Data Source=." providerName="System.Data.SqlClient" />-->
+    <add
       name="DatabaseContext"
-      connectionString="Password=123456;Persist Security Info=True;User ID=jalalat;Initial Catalog=JalalatDB;Data Source=bisrds01"
+      connectionString="Password=123;Persist Security Info=True;User ID=sa;Initial Catalog=TestBekhard;Data Source=."
       providerName="System.Data.SqlClient"
-      />-->
+      />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
