--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -180,6 +180,7 @@
     <Content Include="scripts\axios.min.map" />
     <Content Include="scripts\axios.map" />
     <Content Include="Content\glyphicons-halflings-regular.ttf" />
+    <None Include="Properties\PublishProfiles\SanvichTaha.pubxml" />
     <None Include="scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="scripts\Get_Lat-lon.html" />
     <Content Include="scripts\HtmlPage1.html" />
@@ -216,6 +217,9 @@
     <Content Include="Views\Configs\Index.cshtml" />
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\About\HamidJalalat.cshtml" />
+    <None Include="Web.SanvichTaha.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
