--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -126,12 +126,13 @@
     <Content Include="Content\bootstrap-reboot.css" />
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap-rtl.css" />
-    <Content Include="Content\bootstrap-rtl.min.css" />
+    <Content Include="Content\----bootstrap-rtl.min.css" />
     <Content Include="Content\bootstrap-theme-rtl.css" />
     <Content Include="Content\bootstrap-theme-rtl.min.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Image\26438617.png" />
     <Content Include="Content\Image\bootstrap.css" />
     <Content Include="Content\Image\la.png" />
     <Content Include="Content\Image\chicago.png" />
@@ -151,13 +152,38 @@
     <Content Include="js\ContactUs\hamidjalalat.js" />
     <Content Include="js\hjcomponent.js" />
     <Content Include="js\hjFunction.js" />
+    <Content Include="js\OrderMe\Index.js" />
     <Content Include="js\Orders\create.js" />
     <Content Include="js\Orders\Index.js" />
     <Content Include="js\Orders\ordercustomer.js" />
     <Content Include="js\Report\Index.js" />
     <Content Include="js\Watch\Index.js" />
     <Content Include="packages.config" />
+    <Content Include="Picture\19022006%28004%29_32.jpg" />
+    <Content Include="Picture\19022006%28004%29_323.jpg" />
+    <Content Include="Picture\19022006%28004%29_cdc.jpg" />
+    <Content Include="Picture\19022006%28004%29_cs.jpg" />
+    <Content Include="Picture\19022006%28004%29_we.jpg" />
+    <Content Include="Picture\29706256_23.png" />
+    <Content Include="Picture\29706256_32.png" />
+    <Content Include="Picture\29706256_323.png" />
+    <Content Include="Picture\29706256_ddd.png" />
+    <Content Include="Picture\29706256_vdfv.png" />
+    <Content Include="Picture\29706256_wewe.png" />
+    <Content Include="Picture\5c55ca02de4ad_نوشابه قوطی.jpg" />
+    <Content Include="Picture\5c55ca031b8c4_نوشابه خانواده.jpg" />
+    <Content Include="Picture\5c55ca03d0aaf_الکی.jpg" />
     <Content Include="Picture\5cf35c62644be.jpg" />
+    <Content Include="Picture\5cf35c62644be_Owner.jpg" />
+    <Content Include="Picture\5cf35c62644be_پیتزا پپرونی.jpg" />
+    <Content Include="Picture\cheken_ساندویج مرغ.jpg" />
+    <Content Include="Picture\download_ساندویج بندری.jpg" />
+    <Content Include="Picture\download_ساندویج مرغ.jpg" />
+    <Content Include="Picture\images_سوسیس بلغاری.jpg" />
+    <Content Include="Picture\ir.pitza.app_512x512_Owner.png" />
+    <Content Include="Picture\ir.pitza.app_512x512_پیتزا مخلوط.png" />
+    <Content Include="Picture\بندری_ساندویج سوسیس بندری.jpg" />
+    <Content Include="Picture\ماکرونی_ماکارونی.jpg" />
     <Content Include="scripts\axios.js" />
     <Content Include="scripts\axios.min.js" />
     <Content Include="scripts\bootstrap-rtl.js" />
@@ -217,6 +243,7 @@
     <Content Include="Views\Configs\Index.cshtml" />
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\About\HamidJalalat.cshtml" />
+    <Content Include="Views\OrderMe\Index.cshtml" />
     <None Include="Web.SanvichTaha.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -277,6 +304,7 @@
     <Compile Include="Controllers\ConfigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
+    <Compile Include="Controllers\OrderMeController.cs" />
     <Compile Include="Controllers\RegisterOrderController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\test.cs" />
