--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -324,6 +324,9 @@
     <Compile Include="OrderController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="OrderMeController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterOrderController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
