--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -134,6 +134,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Image\26438617.png" />
     <Content Include="Content\Image\bootstrap.css" />
+    <Content Include="Content\Image\d1.jpg" />
     <Content Include="Content\Image\la.png" />
     <Content Include="Content\Image\chicago.png" />
     <Content Include="Content\Image\ny.png" />
@@ -244,6 +245,7 @@
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\About\HamidJalalat.cshtml" />
     <Content Include="Views\OrderMe\Index.cshtml" />
+    <Content Include="Views\Shared\_Layout_Solid.cshtml" />
     <None Include="Web.SanvichTaha.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
