--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -162,42 +162,22 @@
     <Content Include="js\Watch\Index.js" />
     <Content Include="packages.config" />
     <Content Include="Picture\119357291966305_نوشابه زرد کوچک.jpg" />
-    <Content Include="Picture\19022006%28004%29_32.jpg" />
-    <Content Include="Picture\19022006%28004%29_323.jpg" />
-    <Content Include="Picture\19022006%28004%29_cdc.jpg" />
-    <Content Include="Picture\19022006%28004%29_cs.jpg" />
-    <Content Include="Picture\19022006%28004%29_we.jpg" />
-    <Content Include="Picture\29706256_23.png" />
-    <Content Include="Picture\29706256_32.png" />
-    <Content Include="Picture\29706256_323.png" />
-    <Content Include="Picture\29706256_ddd.png" />
-    <Content Include="Picture\29706256_vdfv.png" />
-    <Content Include="Picture\29706256_wewe.png" />
     <Content Include="Picture\5827148c1acec_ساندویچ مرغ.jpg" />
     <Content Include="Picture\5c55ca02de4ad_نوشابه قوطی.jpg" />
-    <Content Include="Picture\5c55ca031b8c4_نوشابه خانواده.jpg" />
     <Content Include="Picture\5c55ca03d0aaf_الکی.jpg" />
-    <Content Include="Picture\5cf35c62644be.jpg" />
-    <Content Include="Picture\5cf35c62644be_Owner.jpg" />
-    <Content Include="Picture\5cf35c62644be_پیتزا پپرونی.jpg" />
     <Content Include="Picture\5d6b9eb8dbaa9_ساندویچ هات داگ.jpg" />
     <Content Include="Picture\5da5b16837275_پیتزا مخلوط دونفره.jpg" />
     <Content Include="Picture\5db6d59d2068b_نوشابه مشکی کوچک.jpg" />
     <Content Include="Picture\5ea40f0d9df75_ساندویچ بندری.jpg" />
     <Content Include="Picture\62600223240181_نوشابه خانواده زرد.jpg" />
-    <Content Include="Picture\cheken_ساندویج مرغ.jpg" />
     <Content Include="Picture\download %283%29_نوشابه سون آپ کوچک.jpg" />
     <Content Include="Picture\download %284%29_نوشابه خانواده مشکی.jpg" />
     <Content Include="Picture\download_ساندویج بندری.jpg" />
-    <Content Include="Picture\download_ساندویج مرغ.jpg" />
-    <Content Include="Picture\download_کالباس.jpg" />
-    <Content Include="Picture\images_سوسیس بلغاری.jpg" />
     <Content Include="Picture\ir.pitza.app_512x512_Owner.png" />
     <Content Include="Picture\ir.pitza.app_512x512_Owner_پیتزا مرغ دو نفره.png" />
     <Content Include="Picture\ir.pitza.app_512x512_پیتزا مخلوط.png" />
+    <Content Include="Picture\download %285%29_پیتزا قارچ گوشت.jpg" />
     <Content Include="Picture\_111757778_15285fc7-82fb-454a-be5c-173ebddf2133_Owner.jpg" />
-    <Content Include="Picture\بندری_ساندویج سوسیس بندری.jpg" />
-    <Content Include="Picture\ماکرونی_ماکارونی.jpg" />
     <Content Include="scripts\axios.js" />
     <Content Include="scripts\axios.min.js" />
     <Content Include="scripts\bootstrap-rtl.js" />
