--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -165,6 +165,7 @@
     <Content Include="Picture\5827148c1acec_ساندویچ مرغ.jpg" />
     <Content Include="Picture\5c55ca02de4ad_نوشابه قوطی.jpg" />
     <Content Include="Picture\5c55ca03d0aaf_الکی.jpg" />
+    <Content Include="Picture\5c55ca03d0aaf_الکی_دوغ لیوانی.jpg" />
     <Content Include="Picture\5d6b9eb8dbaa9_ساندویچ هات داگ.jpg" />
     <Content Include="Picture\5da5b16837275_پیتزا مخلوط دونفره.jpg" />
     <Content Include="Picture\5db6d59d2068b_نوشابه مشکی کوچک.jpg" />
