--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -163,10 +163,13 @@
     <Content Include="packages.config" />
     <Content Include="Picture\119357291966305_نوشابه زرد کوچک.jpg" />
     <Content Include="Picture\5827148c1acec_ساندویچ مرغ.jpg" />
+    <Content Include="Picture\59e5f27cd0249_ساندویچ ژامبون تنوری.jpg" />
     <Content Include="Picture\5c55ca02de4ad_نوشابه قوطی.jpg" />
     <Content Include="Picture\5c55ca03d0aaf_الکی.jpg" />
     <Content Include="Picture\5c55ca03d0aaf_الکی_دوغ لیوانی.jpg" />
+    <Content Include="Picture\5cf35fb01ec8e_نشابه قوطی مشکی.jpg" />
     <Content Include="Picture\5d6b9eb8dbaa9_ساندویچ هات داگ.jpg" />
+    <Content Include="Picture\5d942c9acb973_یک پرس بندری.jpg" />
     <Content Include="Picture\5da5b16837275_پیتزا مخلوط دونفره.jpg" />
     <Content Include="Picture\5db6d59d2068b_نوشابه مشکی کوچک.jpg" />
     <Content Include="Picture\5ea40f0d9df75_ساندویچ بندری.jpg" />
@@ -178,7 +181,11 @@
     <Content Include="Picture\ir.pitza.app_512x512_Owner_پیتزا مرغ دو نفره.png" />
     <Content Include="Picture\ir.pitza.app_512x512_پیتزا مخلوط.png" />
     <Content Include="Picture\download %285%29_پیتزا قارچ گوشت.jpg" />
+    <Content Include="Picture\unnamed %281%29_ساندویج کوکتل.jpg" />
     <Content Include="Picture\_111757778_15285fc7-82fb-454a-be5c-173ebddf2133_Owner.jpg" />
+    <Content Include="Picture\ساندویچ-بلغاری-با-پنیر_ساندویچ سوسیس بلغاری.jpg" />
+    <Content Include="Picture\ساندویچ-کالباس-خشک_ساندویج کالباس.jpg" />
+    <Content Include="Picture\ژامبون-مرغ-90-درصد_ساندویج ژامبون مرغ.jpg" />
     <Content Include="scripts\axios.js" />
     <Content Include="scripts\axios.min.js" />
     <Content Include="scripts\bootstrap-rtl.js" />
