--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -170,7 +170,7 @@
     <Content Include="Picture\5cf35fb01ec8e_نشابه قوطی مشکی.jpg" />
     <Content Include="Picture\5d6b9eb8dbaa9_ساندویچ هات داگ.jpg" />
     <Content Include="Picture\5d942c9acb973_یک پرس بندری.jpg" />
-    <Content Include="Picture\5da5b16837275_پیتزا مخلوط دونفره.jpg" />
+    <Content Include="Picture\--5da5b16837275_پیتزا مخلوط دونفره.jpg" />
     <Content Include="Picture\5db6d59d2068b_نوشابه مشکی کوچک.jpg" />
     <Content Include="Picture\5ea40f0d9df75_ساندویچ بندری.jpg" />
     <Content Include="Picture\62600223240181_نوشابه خانواده زرد.jpg" />
@@ -179,8 +179,8 @@
     <Content Include="Picture\download_ساندویج بندری.jpg" />
     <Content Include="Picture\ir.pitza.app_512x512_Owner.png" />
     <Content Include="Picture\ir.pitza.app_512x512_Owner_پیتزا مرغ دو نفره.png" />
-    <Content Include="Picture\ir.pitza.app_512x512_پیتزا مخلوط.png" />
     <Content Include="Picture\download %285%29_پیتزا قارچ گوشت.jpg" />
+    <Content Include="Picture\5da5b16837275_پیتزا مخلوط دونفره.jpg" />
     <Content Include="Picture\unnamed %281%29_ساندویج کوکتل.jpg" />
     <Content Include="Picture\_111757778_15285fc7-82fb-454a-be5c-173ebddf2133_Owner.jpg" />
     <Content Include="Picture\ساندویچ-بلغاری-با-پنیر_ساندویچ سوسیس بلغاری.jpg" />
