--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -132,9 +132,10 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Image\26438617.png" />
+    <Content Include="Content\Image\26438617.jpg" />
     <Content Include="Content\Image\bootstrap.css" />
     <Content Include="Content\Image\d1.jpg" />
+    <Content Include="Content\Image\hero-banner1400x500-fast-food.png" />
     <Content Include="Content\Image\la.png" />
     <Content Include="Content\Image\chicago.png" />
     <Content Include="Content\Image\ny.png" />
