--- a/Main/Web.config
+++ b/Main/Web.config
@@ -26,6 +26,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+      <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <roleManager enabled="true" defaultProvider="CustomRolesProvider" cacheRolesInCookie="false">
