--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -164,16 +164,20 @@
     <Content Include="packages.config" />
     <Content Include="Picture\119357291966305_نوشابه زرد کوچک.jpg" />
     <Content Include="Picture\5827148c1acec_ساندویچ مرغ.jpg" />
+    <Content Include="Picture\5827148c1acec_ساندویچ مرغ_ساندویج مرغ با قارپچ پنیر.jpg" />
     <Content Include="Picture\59e5f27cd0249_ساندویچ ژامبون تنوری.jpg" />
+    <Content Include="Picture\59e5f27cd0249_ساندویچ ژامبون تنوری_ساندویج ژامبون تنوری با قارچ پنیر.jpg" />
     <Content Include="Picture\5c55ca02de4ad_نوشابه قوطی.jpg" />
     <Content Include="Picture\5c55ca03d0aaf_الکی.jpg" />
     <Content Include="Picture\5c55ca03d0aaf_الکی_دوغ لیوانی.jpg" />
     <Content Include="Picture\5cf35fb01ec8e_نشابه قوطی مشکی.jpg" />
     <Content Include="Picture\5d6b9eb8dbaa9_ساندویچ هات داگ.jpg" />
+    <Content Include="Picture\5d6b9eb8dbaa9_ساندویچ هات داگ_ساندویج هات داگ با قارچ پنیر.jpg" />
     <Content Include="Picture\5d942c9acb973_یک پرس بندری.jpg" />
     <Content Include="Picture\--5da5b16837275_پیتزا مخلوط دونفره.jpg" />
     <Content Include="Picture\5db6d59d2068b_نوشابه مشکی کوچک.jpg" />
     <Content Include="Picture\5ea40f0d9df75_ساندویچ بندری.jpg" />
+    <Content Include="Picture\5ea40f0d9df75_ساندویچ بندری_ساندویچ بندی با قارچ پنیر.jpg" />
     <Content Include="Picture\62600223240181_نوشابه خانواده زرد.jpg" />
     <Content Include="Picture\download %283%29_نوشابه سون آپ کوچک.jpg" />
     <Content Include="Picture\download %284%29_نوشابه خانواده مشکی.jpg" />
@@ -182,10 +186,14 @@
     <Content Include="Picture\ir.pitza.app_512x512_Owner_پیتزا مرغ دو نفره.png" />
     <Content Include="Picture\download %285%29_پیتزا قارچ گوشت.jpg" />
     <Content Include="Picture\5da5b16837275_پیتزا مخلوط دونفره.jpg" />
+    <Content Include="Picture\photo_2020-05-05_16-00-33_ساندویج همبرگر  با قارچ و پنیر.jpg" />
+    <Content Include="Picture\photo_2020-05-05_16-00-33_ساندویج همبرگر مخصوص.jpg" />
     <Content Include="Picture\unnamed %281%29_ساندویج کوکتل.jpg" />
+    <Content Include="Picture\unnamed %281%29_ساندویج کوکتل_ساندویچ کوکتل با قارچ پنیر.jpg" />
     <Content Include="Picture\_111757778_15285fc7-82fb-454a-be5c-173ebddf2133_Owner.jpg" />
     <Content Include="Picture\ساندویچ-بلغاری-با-پنیر_ساندویچ سوسیس بلغاری.jpg" />
     <Content Include="Picture\ساندویچ-کالباس-خشک_ساندویج کالباس.jpg" />
+    <Content Include="Picture\نان-باگت_نان باگت.jpg" />
     <Content Include="Picture\ژامبون-مرغ-90-درصد_ساندویج ژامبون مرغ.jpg" />
     <Content Include="scripts\axios.js" />
     <Content Include="scripts\axios.min.js" />
